--- a/kankan/pages/main/pullrefresh_with_tab.html
+++ b/kankan/pages/main/pullrefresh_with_tab.html
@@ -821,15 +821,15 @@
 							var listItemHTML = new Util.StringBuilder();
 							listItemHTML.append('<div class="li-content">')
 								.append('<div class="comm-item">')
-								.appendFormat('<div class="item-tap mui-col-sm-12 mui-col-xs-12" data-comm-id="{0}">', item.commodity_id)
-								.appendFormat('<img class="lazy" src="../../images/nopic.jpg" data-original="{0}">', item.img_flag)
+								.appendFormat('<div class="item-tap mui-col-sm-12 mui-col-xs-12" data-comm-id="{0}" style="text-align:center;background-color: #cccccc;overflow: hidden;vertical-align:middle;display: inline-block;">', item.commodity_id)
+								.appendFormat('<img class="lazy" src="../../images/nopic.jpg" data-original="{0}"  style="height:100%;width:auto;vertical-align:middle;">', item.img_flag)
 								//.appendFormat('<img src="{0}">', item.img_flag)
 								.appendFormat('<span>{0}</span>', item.address)
 								.append('</div>')
 								.append('<div class="item-buttom mui-col-sm-12 mui-col-xs-12">')
 								.append('<div class="height-max mui-row">')
 								.append('<div class="height-max mui-col-sm-8 mui-col-xs-8">')
-								.appendFormat('<div class="comm-name mui-col-sm-12">{0}</div>', item.comm_name)
+								.appendFormat('<div class="comm-name mui-col-sm-12">{0}</div>', HTMLDecode(item.comm_name))
 								.appendFormat('<div class="comm-price mui-col-sm-12">{0} P</div>', item.price)
 								.append('</div>')
 								.append('<div class="height-max mui-col-sm-4 mui-col-xs-4">')
