--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -24,6 +24,15 @@
 			#slider{
 				position: relative;z-index:1;
 			}
+			.imgboxs{
+				width: 100%;
+				height: 320px;
+				vertical-align:middle;
+				display: inline-block;
+				text-align: center;
+				overflow: hidden;
+				line-height: 320px;
+			}
 			
 		</style>
 	</head>
@@ -45,11 +54,11 @@
 			<div id="slider" class="mui-slider">
 				<div class="mui-slider-group mui-slider-loop">
 					<!-- last -->
-					<div class="mui-slider-item mui-slider-item-duplicate firstimage" align="center" style="width: 100%;overflow: hidden;">
+					<div class="mui-slider-item mui-slider-item-duplicate firstimage imgboxs" align="center" style="">
 						<img src="" onerror="this.src='../../../images/nopic.jpg'">
 					</div>
 					<!-- first -->
-					<div class="mui-slider-item mui-slider-item-duplicate lastimage" align="center" style="width: 100%;overflow: hidden;">
+					<div class="mui-slider-item mui-slider-item-duplicate lastimage imgboxs" align="center" style="">
 						<img src="" onerror="this.src='../../../images/nopic.jpg'">
 					</div>
 				</div>
@@ -309,6 +318,7 @@
 						Log.d("success");
 						messageshow(data);
 						clickprocomment();
+						imageshow();
 					},
 					ng: function(data) {
 						Log.d(data);
@@ -317,6 +327,19 @@
 							$(".mui-content").hide();
 						}
 					}
+				});
+			}
+			//Picture processing
+			function imageshow(){
+				var _w = parseInt($(window).width());//获取浏览器的宽度
+				//console.log(_w);
+				$("#slider img").each(function(i){
+					var img = $(this);
+					var realWidth=$(this).width();//图片真实的宽度
+					var realHeight=$(this).height();//图片真实的高度
+					var cha=realWidth-_w*1;
+					var bival=cha/2;
+					$(this).attr("style","height: 320px; width: auto;vertical-align:middle;margin-left:-"+bival+"px;");
 				});
 			}
 
@@ -336,13 +359,21 @@
 					});
 				});
 			}
+			//translate html
+			function HTMLDecode(text) { 
+			    var temp = document.createElement("div"); 
+			    temp.innerHTML = text; 
+			    var output = temp.innerText || temp.textContent; 
+			    temp = null; 
+			    return output; 
+		   }
 			//message show
 			function messageshow(results) {
 				$(".mui-slider-indicator").empty();
 				var commodity = results.data;
 				var comdbasic = commodity.commodity_basic;
-				var comdname = comdbasic[0].comm_name;
-				var comdmesage = comdbasic[0].comm_detail;
+				var comdname = HTMLDecode(comdbasic[0].comm_name);
+				var comdmesage = HTMLDecode(comdbasic[0].comm_detail);
 				var comdityid = comdbasic[0].commodity_id;
 				$("#comodityid").val(comdityid);
 				$(".kankan_productname").html(comdname); //name
@@ -354,8 +385,8 @@
 				var htmlfocus = "";
 				var imglength = imgsarr.length;
 				var la = imgsarr.length - 1 * 1;
-				var first = '<img src="' + imgsarr[0] + '"  style="height: 320px; width: auto;" onerror="this.src=' + "'" + '../../../images/nopic.jpg' + "'" + '">';
-				var last = '<img src="' + imgsarr[la] + '"  style="height: 320px; width: auto;" onerror="this.src=' + "'" + '../../../images/nopic.jpg' + "'" + '">';
+				var first = '<img src="' + imgsarr[0] + '"  style="height: 320px; width: auto;vertical-align:middle;" onerror="this.src=' + "'" + '../../../images/nopic.jpg' + "'" + '">';
+				var last = '<img src="' + imgsarr[la] + '"  style="height: 320px; width: auto;vertical-align:middle;" onerror="this.src=' + "'" + '../../../images/nopic.jpg' + "'" + '">';
 				$(".firstimage").html(last);
 				$(".lastimage").html(first);
 				if(imglength>1){
@@ -370,8 +401,8 @@
 					if(imgsarr[i] == "") {
 						imgurl = "../../../images/nopic.jpg";
 					}
-					htmlimg += '<div class="mui-slider-item sliderimg" align="center" style="width: 100%;overflow: hidden;">';
-					htmlimg += '<img src="' + imgurl + '" style="height: 320px; width: auto;" onerror="this.src=' + "'../../../images/nopic.jpg'" + '">';
+					htmlimg += '<div class="mui-slider-item sliderimg imgboxs" align="center">';
+					htmlimg += '<img src="' + imgurl + '" style="height: 320px; width: auto;vertical-align:middle;" onerror="this.src=' + "'../../../images/nopic.jpg'" + '">';
 					htmlimg += '</div>';
 					if(i == 0) {
 						var htmlfocus = '<div class="mui-indicator mui-active"></div>';
